force-app/main/default/objects/Suppliers__c/Suppliers__c.object-meta.xml
<CustomObject>
    <description>Third Party Contractors</description>
    <label>Supplier</label>
    <nameField>
        <label>Suppliers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>