force-app/main/default/objects/Suppliers__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>&quot;First Mile&quot;</defaultValue>
    <label>Branch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>