force-app/main/default/objects/Suppliers__c/fields/CarrierRegNo__c.field-meta.xml
<CustomField>
    <fullName>CarrierRegNo__c</fullName>
    <label>CarrierRegNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>