force-app/main/default/objects/Suppliers__c/fields/CarrierRegNo_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CarrierRegNo_Expiry_Date__c</fullName>
    <label>CarrierRegNo Expiry Date</label>
    <type>DateTime</type>
</CustomField>