force-app/main/default/objects/Suppliers__c/fields/Case_safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case safe ID</label>
    <type>Text</type>
</CustomField>