force-app/main/default/objects/Suppliers__c/fields/Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_name__c</fullName>
    <label>Contact name</label>
    <type>TextArea</type>
</CustomField>