force-app/main/default/objects/Suppliers__c/fields/DefaultExpiry__c.field-meta.xml
<CustomField>
    <fullName>DefaultExpiry__c</fullName>
    <label>Default Expiry</label>
    <type>Date</type>
</CustomField>