force-app/main/default/objects/Suppliers__c/fields/Direct_number__c.field-meta.xml
<CustomField>
    <fullName>Direct_number__c</fullName>
    <label>Direct number</label>
    <type>Phone</type>
</CustomField>