force-app/main/default/objects/Suppliers__c/fields/Employee_Liability_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Liability_Expiry_Date__c</fullName>
    <description>Expiry date for the supplier&apos;s Employee Liability Insurance</description>
    <label>Employee Liability Expiry Date</label>
    <type>Date</type>
</CustomField>