force-app/main/default/objects/Suppliers__c/fields/Enqix_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ID__c</fullName>
    <externalId>true</externalId>
    <label>Enqix ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>