force-app/main/default/objects/Suppliers__c/fields/Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email__c</fullName>
    <label>Escalation Email</label>
    <type>Email</type>
</CustomField>