force-app/main/default/objects/Suppliers__c/fields/Escalation_Number__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Number__c</fullName>
    <label>Escalation Contact</label>
    <type>TextArea</type>
</CustomField>