force-app/main/default/objects/Suppliers__c/fields/Insurance_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Case_Created_Date__c</fullName>
    <label>Insurance Case Created Date</label>
    <type>Date</type>
</CustomField>