force-app/main/default/objects/Suppliers__c/fields/Insurance_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Form_URL__c</fullName>
    <formula>&quot;https://thefirstmile.formtitan.com/origin/SupplierInsuranceForm/?fld13=&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Form URL</label>
    <type>Text</type>
</CustomField>