force-app/main/default/objects/Suppliers__c/fields/IsEnvPermitHolder__c.field-meta.xml
<CustomField>
    <fullName>IsEnvPermitHolder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEnvPermitHolder</label>
    <type>Checkbox</type>
</CustomField>