force-app/main/default/objects/Suppliers__c/fields/IsExternal__c.field-meta.xml
<CustomField>
    <fullName>IsExternal__c</fullName>
    <formula>UPPER(Name) != UPPER(&apos;First Mile Ltd&apos;)</formula>
    <label>External?</label>
    <type>Checkbox</type>
</CustomField>