force-app/main/default/objects/Suppliers__c/fields/IsLocalAuthority__c.field-meta.xml
<CustomField>
    <fullName>IsLocalAuthority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLocalAuthority</label>
    <type>Checkbox</type>
</CustomField>