force-app/main/default/objects/Suppliers__c/fields/IsRegdWasteExempt__c.field-meta.xml
<CustomField>
    <fullName>IsRegdWasteExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRegdWasteExempt</label>
    <type>Checkbox</type>
</CustomField>