force-app/main/default/objects/Suppliers__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>