force-app/main/default/objects/Suppliers__c/fields/Minimum_Bag_Order__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Bag_Order__c</fullName>
    <description>for suppliers for minimun quantity of bag</description>
    <label>Minimum Bag Order</label>
    <type>TextArea</type>
</CustomField>