force-app/main/default/objects/Suppliers__c/fields/Mobilisation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Contact__c</fullName>
    <label>Mobilisation Contact</label>
    <type>TextArea</type>
</CustomField>