force-app/main/default/objects/Suppliers__c/fields/Mobilisation_Email__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Email__c</fullName>
    <label>Mobilisation Email</label>
    <type>Email</type>
</CustomField>