force-app/main/default/objects/Suppliers__c/fields/Public_Liability_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Expiry_Date__c</fullName>
    <description>Expiry date for the supplier&apos;s Public Liability Insurance</description>
    <label>Public Liability Expiry Date</label>
    <type>Date</type>
</CustomField>