force-app/main/default/objects/Suppliers__c/fields/Recycling_sacks__c.field-meta.xml
<CustomField>
    <fullName>Recycling_sacks__c</fullName>
    <label>Recycling sacks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>