force-app/main/default/objects/Suppliers__c/fields/Rubbish_sacks__c.field-meta.xml
<CustomField>
    <fullName>Rubbish_sacks__c</fullName>
    <label>Rubbish sacks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>