force-app/main/default/objects/Suppliers__c/fields/Second_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Contact_Name__c</fullName>
    <label>Second Contact Name</label>
    <type>TextArea</type>
</CustomField>