force-app/main/default/objects/Suppliers__c/fields/Second_Phone__c.field-meta.xml
<CustomField>
    <fullName>Second_Phone__c</fullName>
    <label>Second Phone</label>
    <type>Phone</type>
</CustomField>