force-app/main/default/objects/Suppliers__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0694E000000PHJjQAO&quot;, &quot;Signature&quot;, 240,240)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>