force-app/main/default/objects/Suppliers__c/fields/Supplier_Active__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Supplier Active</label>
    <type>Checkbox</type>
</CustomField>