force-app/main/default/objects/Suppliers__c/fields/Supplier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Notes__c</fullName>
    <label>Supplier Notes</label>
    <type>TextArea</type>
</CustomField>