force-app/main/default/objects/Suppliers__c/fields/SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>SupplierAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account selected should be of type Supplier</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <filterItems>
            <field>Account.IsOwnerOfSupplierGroup__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Supplier</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>