force-app/main/default/objects/Suppliers__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sack Collection</fullName>
            </value>
            <value>
                <fullName>Wheelie Bins</fullName>
            </value>
            <value>
                <fullName>One Off Clearances</fullName>
            </value>
            <value>
                <fullName>Compactors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>