force-app/main/default/objects/Suppliers__c/fields/X1st_Insurance_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Insurance_Email_Date__c</fullName>
    <label>1st Insurance Email Date</label>
    <type>Date</type>
</CustomField>