force-app/main/default/objects/Suppliers__c/fields/X2nd_Insurance_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Insurance_Email_Date__c</fullName>
    <label>2nd Insurance Email Date</label>
    <type>Date</type>
</CustomField>