force-app/main/default/objects/Suppliers__c/validationRules/RequireAccountForActiveSuppliers.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireAccountForActiveSuppliers</fullName>
    <active>false</active>
    <description>An account is required for Active Suppliers.</description>
    <errorConditionFormula>Supplier_Active__c &amp;&amp;  ISBLANK( SupplierAccount__c )</errorConditionFormula>
    <errorDisplayField>SupplierAccount__c</errorDisplayField>
    <errorMessage>Supplier Account is required for Active Supplier.</errorMessage>
</ValidationRule>