force-app/main/default/objects/Suppliers__c/validationRules/RequireEmailForActiveSuppliers.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireEmailForActiveSuppliers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Supplier_Active__c, ISBLANK(Email__c))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email is required for Active Supplier.</errorMessage>
</ValidationRule>